syntax = "proto3";

package app.improving.ordercontext.order;

import "app/improving/order/api/order_api.proto";
import "common_api.proto";
import "kalix/annotations.proto";


service OrderAction {
    option (kalix.codegen) = {
        action: {}
    };

    rpc PurchaseTicket(ApiCreateOrder) returns (ApiOrderId);
}